# au-fhir-test-data

./: .gitignore  .gitlab-ci.yml  .gitmodules  .project  AUCoreTestDataCoverage.md  BuildCsvFhirMapping.bat  BuildCsvFhirMappingLinux.bat  BuildTestDataClient.bat  BuildTestDataClientLinux.bat  CONTRIBUTING.md  GOVERNANCE.md  GenerateAll.bat  GenerateData.bat  README.md  Sparked.Csv2FhirMapping.sln  Sparked.TestDataMapping.sln  UploadData.bat  UploadDirect.bat  UploadERequesting.bat  UploadGenerated.bat  UploadInferno.bat  element_coverage.py  extract_error_files.xsl  quarantine  run_validator.sh
Postman/: AU Core Inferno Tests.postman_collection.json  Connectathon_March2024.postman_collection.json  Example Sparked Test Data Upload.postman_environment.json  Sparked AUCore Test Data.postman_collection.json  Sparked AUCore Test Data.postman_environment.json  Sparked AUPS Test Data.postman_collection.json  Sparked AUeRequesting Test Data.postman_collection.json  Sparked Test Data.postman_collection.json  Sparked eReq FHIR Server Filler.postman_environment.json  Sparked eReq FHIR Server Placer.postman_environment.json  Sparked eRequesting Test Data.postman_collection.json  extract_payload.sh  extracted_1.json  extracted_10.json  extracted_100.json  extracted_101.json  extracted_102.json  extracted_103.json  extracted_104.json  extracted_105.json  extracted_106.json  extracted_108.json  extracted_11.json  extracted_12.json  extracted_13.json  extracted_14.json  extracted_15.json  extracted_16.json  (+91 more)
xls-converter/: Makefile  convert.ipynb  main.py  pyproject.toml
(+2159 files in other folders)
